# cpg-detecor

./: .gitignore  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml
app/: __init__.py  cpg_def.py  cpg_pred.py  cpg_var_def.py  cpg_var_pred.py
app/templates/: index.html  result.html
models/: README.md
notebooks/: cpg-det.ipynb
src/: cpg_detector.py
tests/: __init__.py  test_cpg_pred.py  test_cpg_var_pred.py
utils/: download.py
