[tool.poetry]
name = "cpg-detector"
version = "0.1.0"
description = "The project involves counting the number of CpGs (consecutive CGs) in given DNA (of N, A, C, G, T) sequences, using NN with LSTM layer"
authors = ["Venkatesh Wadawadagi"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "4.12.3"
blinker = "1.7.0"
bs4 = "0.0.2"
build = "1.1.1"
cachecontrol = "0.14.0"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
contourpy = "1.2.0"
crashtest = "0.4.1"
cycler = "0.12.1"
distlib = "0.3.8"
dulwich = "0.21.7"
fastjsonschema = "2.19.1"
filelock = "3.13.1"
flask = "3.0.2"
fonttools = "4.50.0"
fsspec = "2024.3.1"
idna = "3.6"
installer = "0.7.0"
itsdangerous = "2.1.2"
jaraco-classes = "3.3.1"
jinja2 = "3.1.3"
keyring = "24.3.1"
kiwisolver = "1.4.5"
markupsafe = "2.1.5"
matplotlib = "3.8.3"
more-itertools = "10.2.0"
mpmath = "1.3.0"
msgpack = "1.0.8"
networkx = "3.2.1"
numpy = "1.26.4"
packaging = "24.0"
pexpect = "4.9.0"
pillow = "10.2.0"
pkginfo = "1.10.0"
platformdirs = "4.2.0"
poetry = "1.8.2"
poetry-core = "1.9.0"
poetry-plugin-export = "1.7.1"
ptyprocess = "0.7.0"
pyparsing = "3.1.2"
pyproject-hooks = "1.0.0"
python-dateutil = "2.9.0.post0"
pywin32-ctypes = "0.2.2"
rapidfuzz = "3.6.2"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
six = "1.16.0"
soupsieve = "2.5"
sympy = "1.12"
tomlkit = "0.12.4"
torch = "2.2.1"
trove-classifiers = "2024.3.3"
typing-extensions = "4.10.0"
urllib3 = "2.2.1"
virtualenv = "20.25.1"
werkzeug = "3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
